Fix flickering issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,6 @@
   height: 60px;
   position: relative;
   transform-style: preserve-3d;
-  backface-visibility: hidden;
 
   &.roll1 {
     transform-style: preserve-3d;
